more chapter notes

--- a/decl-your-lang/language-definition/language-definition.tex
+++ b/decl-your-lang/language-definition/language-definition.tex
@@ -1,10 +1,10 @@
-\newpage
 \chapter{Declarative Language Definition}
 
 This chapter examines the philosophical background of language workbenches in
 general, and Spoofax in particular.
 If you just want to get on with it and start building a
 language definition with Spoofax, just proceed to \Chapter{getting-spoofax}.
+
 
 \section{Software Languages}
 
@@ -36,7 +36,10 @@ algorithm.
 Furthermore, the structure assigned to well-formed sentences is assigned a
 meaning. The semantics of the language
 
+
 \section{Understanding Software through Linguistic Abstraction}
+
+\cite{Visser15}
 
 pragmatic goals
 
@@ -44,7 +47,14 @@ modeling
 
 capturing domain understanding
 
-\section{}
+standardization; instead of instantiating design patterns
+
+avoiding categories of errors
+
+
+\section{Mechanics of Linguistic Abstraction}
+
+there are multiple approaches to linguistic abstraction
 
 internal, external, embedded languages
 
@@ -53,6 +63,7 @@ leaky abstractions
 mobl \cite{HemelV11}
 
 WebDSL \cite{HemelGKV11}
+
 
 \section{Language Workbenches}
 
