syntax related references

--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -32,6 +32,20 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   isbn = {0-7695-1819-2},
 }
 
+@inproceedings{BastenS10,
+  title = {AMBIDEXTER: Practical Ambiguity Detection},
+  author = {Bas Basten and Tijs van der Storm},
+  year = {2010},
+  doi = {http://dx.doi.org/10.1109/SCAM.2010.21},
+  researchr = {http://researchr.org/publication/BastenS10},
+  cites = {0},
+  citedby = {0},
+  pages = {101-102},
+  booktitle = {Tenth IEEE International Working Conference on Source Code Analysis and Manipulation, SCAM 2010, Timisoara, Romania, 12-13 September 2010},
+  publisher = {IEEE Computer Society},
+  isbn = {978-0-7695-4178-5},
+}
+
 @inproceedings{Tomita85,
   title = {An Efficient Context-Free Parsing Algorithm for Natural Languages},
   author = {Masaru Tomita},
@@ -261,6 +275,23 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   series = {Electronic Notes in Theoretical Computer Science},
   address = {Braga, Portugal},
   publisher = {Elsevier},
+}
+
+@inproceedings{ErdwegRKO12,
+  title = {Layout-Sensitive Generalized Parsing},
+  author = {Sebastian Erdweg and Tillmann Rendel and Christian Kästner and Klaus Ostermann},
+  year = {2012},
+  doi = {http://dx.doi.org/10.1007/978-3-642-36089-3_14},
+  researchr = {http://researchr.org/publication/ErdwegRKO12},
+  cites = {0},
+  citedby = {0},
+  pages = {244-263},
+  booktitle = {Software Language Engineering, 5th International Conference, SLE 2012, Dresden, Germany, September 26-28, 2012, Revised Selected Papers},
+  editor = {Krzysztof Czarnecki and Görel Hedin},
+  volume = {7745},
+  series = {Lecture Notes in Computer Science},
+  publisher = {Springer},
+  isbn = {978-3-642-36089-3},
 }
 
 @techreport{BV94,
@@ -518,6 +549,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   isbn = {978-1-4503-0203-6},
 }
 
+@inproceedings{ErdwegRKO11,
+  title = {SugarJ: library-based syntactic language extensibility},
+  author = {Sebastian Erdweg and Tillmann Rendel and Christian Kästner and Klaus Ostermann},
+  year = {2011},
+  doi = {http://doi.acm.org/10.1145/2048066.2048099},
+  researchr = {http://researchr.org/publication/ErdwegRKO11},
+  cites = {0},
+  citedby = {0},
+  pages = {391-406},
+  booktitle = {Proceedings of the 26th Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2011, part of SPLASH 2011, Portland, OR, USA, October 22 - 27, 2011},
+  editor = {Cristina Videira Lopes and Kathleen Fisher},
+  publisher = {ACM},
+  isbn = {978-1-4503-0940-0},
+}
+
 @inproceedings{Visser03,
   title = {Program Transformation with {Stratego/XT}: Rules, Strategies, Tools, and Systems in {Stratego/XT 0.9}},
   author = {Eelco Visser},
@@ -534,6 +580,23 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   series = {Lecture Notes in Computer Science},
   publisher = {Springer},
   isbn = {3-540-22119-0},
+}
+
+@inproceedings{BravenboerV04,
+  title = {Concrete syntax for objects: domain-specific language embedding and assimilation without restrictions},
+  author = {Martin  Bravenboer and Eelco Visser},
+  year = {2004},
+  doi = {http://doi.acm.org/10.1145/1028976.1029007},
+  tags = {programming languages, object-oriented programming, concrete object syntax, syntax definition, meta programming, assimilation, SDF, XML, XML Schema, Stratego/XT, transformation language, composition, MetaBorg, language design, reuse, code generation, subject-oriented programming, abstraction, Meta-Environment, extensible language, ASF+SDF, feature-oriented programming, concrete syntax, meta-objects, transformation, Stratego, program transformation, domain-specific language},
+  researchr = {http://researchr.org/publication/BravenboerV04},
+  cites = {51},
+  citedby = {8},
+  pages = {365-383},
+  booktitle = {Proceedings of the 19th Annual ACM SIGPLAN Conference on Object-Oriented Programming, Systems, Languages, and Applications, OOPSLA 2004},
+  editor = {John M. Vlissides and Douglas C. Schmidt},
+  address = {Vancouver, BC, Canada},
+  publisher = {ACM},
+  isbn = {1-58113-831-8},
 }
 
 @inproceedings{KonatVKWV2012,
